--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - .env
     depends_on:
       - redis
+    environment:
+      IN_DOCKER: true
 
   redis:
     image: redis:latest
