--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ httpx = "^0.27.2"
 redis = "^5.2.0"
 google-generativeai = "^0.8.3"
 pydantic = "^2.10.2"
+pytest = "^8.3.3"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
