--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cachetools==5.5.0 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
 charset-normalizer==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 fastapi==0.115.5 ; python_version >= "3.12" and python_version < "4.0"
 google-ai-generativelanguage==0.6.10 ; python_version >= "3.12" and python_version < "4.0"
 google-api-core==2.23.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -21,6 +21,9 @@ httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
 httplib2==0.22.0 ; python_version >= "3.12" and python_version < "4.0"
 httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
+iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
+pluggy==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 proto-plus==1.25.0 ; python_version >= "3.12" and python_version < "4.0"
 protobuf==5.29.0 ; python_version >= "3.12" and python_version < "4.0"
 pyasn1-modules==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -28,6 +31,7 @@ pyasn1==0.6.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.27.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.10.2 ; python_version >= "3.12" and python_version < "4.0"
 pyparsing==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
+pytest==8.3.3 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 redis==5.2.0 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
